# aircrack-ng

./: .clang-format  .codespellrc  .coverityignore  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AutoSetup.py  CHANGELOG  CMakeLists.txt  ChangeLog  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.release  Hack  INSTALL  INSTALLING  LICENSE  Makefile  Makefile-CYGWIN  Makefile-Linux  Makefile.FreeBSD  Makefile.NetBSD  Makefile.OpenBSD  Makefile.airpcap  Makefile.am  Makefile.cygwin  Makefile.integration.mk  Makefile.osx  Makefile.other  README  README.CUDA  README.md  README.rst  README_AIRCAP.TXT  README_AIROPDATE  Readme.rst  SECURITY.md  (+51 more)
manpages/: Makefile  Makefile.am  airbase-ng.1  airbase-ng.8  airbase-ng.8.in  aircrack-ng.1  aircrack-ng.1.in  airdecap-ng.1  airdecap-ng.1.in  airdecloak-ng.1  airdecloak-ng.1.in  airdriver-ng.1  airdriver-ng.8  aireplay-ng.1  aireplay-ng.8  aireplay-ng.8.in  airmon-ng.1  airmon-ng.8  airmon-ng.8.in  airmon-zc.8  airodump-ng-oui-update.8  airodump-ng-oui-update.8.in  airodump-ng.1  airodump-ng.8  airodump-ng.8.in  airolib-ng.1  airolib-ng.1.in  airserv-ng.1  airserv-ng.8  airserv-ng.8.in  airsev-ng.1  airtun-ng.1  airtun-ng.8  airtun-ng.8.in  airventriloquist-ng.8  airventriloquist-ng.8.in  airventriloquist.8  besside-ng-crawler.1  besside-ng-crawler.1.in  besside-ng.1  (+24 more)
scripts/airgraph-ng/: Makefile  Makefile.am  README  airgraph-ng  airgraph-ng.py  airodump-join  common.mak  dump-join  dump-join.py  setup.py
src/: COPYING-airvif-ng  MD5_std.h  Makefile  Makefile.am  Makefile.inc  ToDo  airbase-ng.c  aircrack-ng.c  aircrack-ng.h  aircrack-ptw-lib.c  aircrack-ptw-lib.h  aircrack-ptw2-lib.c  aircrack-ptw2-lib.h  airdecap-ng.c  airdecloak-ng.c  airdecloak-ng.h  aireplay-ng.c  airodump-ng.c  airodump-ng.h  airolib-ng.c  airopdate.sh  airoscfunc.sh  airoscfunc_external.sh  airoscfunc_screen.sh  airoscfunc_unstable.sh  airosconf.sh  airoscript-ng  airoscript-ng.1  airoscript-ng.conf  airoscript-ng_advanced.conf  airoscript-ng_debian.conf  airoscript.1  airoscript.conf  airoscript.sh  airoscwordlist.pl  airserv-ng.c  airtun-ng.c  airventriloquist-ng.c  airventriloquist-ng.h  airvif-ng.c  (+94 more)
src/airbase-ng/: airbase-ng.c
src/aircrack-crypto/: MD5_std.h  Makefile.am  Makefile.inc  arch.h  crypto_engine.c  crypto_engine.h  memory.c  memory.h  misc.h  pseudo_intrinsics.h  sha1-git.c  sha1-sse2.S  sha1-sse2.h  simd-intrinsics.c  simd-intrinsics.h  sse-intrinsics.c  wpapsk.c  wpapsk.h
src/aircrack-ng/: aircrack-ng.c  linecount.cpp  linecount.h  session.c  session.h  wkp-frame.h
src/aircrack-osdep/: Makefile.am  Makefile.inc  aircrack_ng_airpcap.h  airpcap.c  byteorder.h  common.c  common.h  crctable_osdep.h  cygwin.c  cygwin.h  cygwin_tap.c  darwin.c  darwin.m  darwin_tap.c  dummy.c  dummy_tap.c  file.c  freebsd.c  freebsd_tap.c  linux.c  linux_tap.c  netbsd.c  netbsd_tap.c  network.c  network.h  openbsd.c  openbsd_tap.c  osdep.c  osdep.h  packed.h
src/aircrack-util/: Makefile.am  Makefile.inc  avl_tree.c  avl_tree.h  circular_buffer.c  circular_buffer.h  circular_queue.c  circular_queue.h  common.c  common.h  console.c  console.h  cpuset.h  cpuset_hwloc.c  cpuset_pthread.c  crypto_engine_loader.c  crypto_engine_loader.h  mcs_index_rates.c  mcs_index_rates.h  simd_cpuid.c  simd_cpuid.h  trampoline.c  trampoline.h  trampoline_arm.c  trampoline_ppc.c  trampoline_stubs.c  trampoline_x86.c  verifyssid.c  verifyssid.h
src/airdecap-ng/: airdecap-ng.c
src/airdecloak-ng/: airdecloak-ng.c  airdecloak-ng.h
src/aireplay-ng/: aireplay-ng.c
src/airodump-ng/: airodump-ng.c  airodump-ng.h  ap_compare.c  ap_compare.h  ap_filter.c  ap_filter.h  ap_list.h  ap_sort.c  ap_sort.h  battery.c  battery.h  channel_hopper.c  channel_hopper.h  communications_options.c  debug.h  dump_csv.c  dump_csv.h  dump_kismet_csv.c  dump_kismet_csv.h  dump_kismet_netxml.c  dump_kismet_netxml.h  dump_write.c  dump_write.h  dump_write_private.h  dump_write_wifi_scanner.c  dump_write_wifi_scanner.h  essid_filter.c  essid_filter.h  get_string_time_from_seconds.c  get_string_time_from_seconds.h  gps.h  gps_tracker.c  gps_tracker.h  ivs_log.c  ivs_log.h  oui.c  oui.h  packet_reader.c  packet_reader.h  packet_writer.c  (+19 more)
src/airolib-ng/: airolib-ng.c
src/airosperl/: airosperl.conf  airosperl.glade  airosperl.pl  airosperl.pm
src/airserv-ng/: airserv-ng.c
src/airtun-ng/: airtun-ng.c
src/airventriloquist-ng/: airventriloquist-ng.c  airventriloquist-ng.h
src/besside-ng/: besside-ng.c
src/besside-ng-crawler/: besside-ng-crawler.c
src/buddy-ng/: buddy-ng.c
src/conf/: airoscript-ng.conf  airoscript-ng_advanced.conf  airoscript-ng_debug.conf
src/conffiles/: airoscript.conf  airosperl.conf  screenrc
src/easside-ng/: easside-ng.c
src/functions/: _internal  airoscfunc.sh  airoscfunc_external.sh  airoscfunc_screen.sh  airoscfunc_unstable.sh  autocrack  autopwn  dicts  generic  interface  internal  menu  reporting
src/goodies/: airoscript.xcf  airoscriptlogo.xcf
src/include/: Makefile.am  Makefile.inc  eapol.h  ethernet.h  hashcat.h  ieee80211.h  ieee80211_radiotap.h  if_arp.h  if_llc.h  ip.h  radiotap-parser.h
src/ivstools/: ivstools.c
src/kstats/: kstats.c
src/locale/: airoscript-ng.mo  airoscript-ng.po
test/: 3.pcap  80211ad_beacon.pcap  Chinese-SSID-Name.pcap  MOM1.cap  Makefile  Makefile.am  Makefile.inc  StayAlfred.hccapx  capture_wds-01.cap  floatingpoint_exception.pcap  int-test-common.sh  makeivs.c  n-02.cap  pass.txt  passphrases.db  password-2.lst  password-3.lst  password.lst  pingreply.c  pmkid-not-recognized.cap  replay.py  test-airbase-ng-0001.sh  test-airbase-ng-0002.sh  test-airbase-ng-0003.sh  test-aircrack-ng-0001.sh  test-aircrack-ng-0002.sh  test-aircrack-ng-0003.sh  test-aircrack-ng-0004.sh  test-aircrack-ng-0005.sh  test-aircrack-ng-0006.sh  test-aircrack-ng-0007.sh  test-aircrack-ng-0008.sh  test-aircrack-ng-0009.sh  test-aircrack-ng-0010.sh  test-aircrack-ng-0011.sh  test-aircrack-ng-0012.sh  test-aircrack-ng-0013.sh  test-aircrack-ng-0014.sh  test-aircrack-ng-0015.sh  test-aircrack-ng-0016.sh  (+61 more)
(+787 files in other folders)
